--- a/jslx1.html
+++ b/jslx1.html
@@ -3,10 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>js练习</title>
+	<script>
+	function myFunction()
+	{
+	document.getElementById("demo").innerHTML="我的第一个javascript函数";
+	}
+	</script>
 	</head>
 	<body>
-	<script>
-	alert(我的第一个 Javascript!)
-	</script>
+	<h1>我的web页面</h1>
+	<p id="demo">一个段落</p>
+	<button type="button" onclick="myFunction()">尝试一下</button>
 	</body>
 	</html>
